--- a/Road to Recovery/pages/viewVolunteer.html
+++ b/Road to Recovery/pages/viewVolunteer.html
@@ -85,7 +85,7 @@
                 checkboxes.forEach((checkbox) => {
 
                     const key = parseInt(checkbox.dataset.column);
-                    checkbox.checked = columnsVisibiltyFlagsName[key];
+                    checkbox.checked = columnsVisibiltyFlags[key];
                 });
 
             } else {
@@ -100,10 +100,10 @@
                 checkboxes.forEach((checkbox) => {
 
                     const key = parseInt(checkbox.dataset.column);
-                    checkbox.checked = columnsVisibiltyFlagsName[key];
+                    checkbox.checked = columnsVisibiltyFlags[key];
                 });
 
-              
+
                 localStorage.setItem(columnsVisibiltyFlagsName, JSON.stringify(columnsVisibiltyFlags));
             }
 
@@ -251,7 +251,7 @@
                         joinDate = joinDate.toLocaleString('he-IL', { dateStyle: 'short' });
 
                         let latestDrive = convertDBDate2FrontEndDate(arr_volunteers[i].LatestDrive);
-                        latestDrive = latestDrive.toLocaleString('he-IL', { dateStyle: 'short' });
+                        latestDrive = latestDrive === null ? '' : latestDrive.toLocaleString('he-IL', { dateStyle: 'short' });
 
 
 
@@ -267,12 +267,11 @@
                             Remarks: arr_volunteers[i].Remarks,
                             Buttons: btnStr,
                             LastModified: lastModified,
-                            //     EnglishName: arr_volunteers[i].EnglishName,
                             NumOfRides_last2Months: arr_volunteers[i].NumOfRides_last2Months,
+                            LatestDrive: latestDrive,
                             MostCommonPath: arr_volunteers[i].MostCommonPath,
                             NearestBigCity: arr_volunteers[i].NearestBigCity,
                             JoinDate: joinDate,
-                            LatestDrive: latestDrive
                         }
                         allVolunteersFromDb.push(Volunteer);
                     }
@@ -286,7 +285,6 @@
                         dom: 'Bfrtip',
                         buttons: [
                             'excel',
-                            //'colvis'
                         ],
                         columnDefs: [
                             {
@@ -297,9 +295,10 @@
                                 targets: 3,
                                 className: 'text-left-strong'
                             },
-                            { "targets": [10], "orderable": false },
+                            { "targets": [11], "orderable": false },
                             { targets: 6, type: 'de_datetime' },
-                            { targets: 9, type: 'de_date' },
+                            { targets: 8, type: 'de_date' },
+                            { targets: 11, type: 'de_date' },
 
 
                         ],
@@ -307,12 +306,12 @@
                             { data: "DisplayName", width: "1%" },              //0
                             { data: "TypeVol", width: "1%" },                  //1
                             { data: "CellPhone", width: "2%" },                //2
-                            //{ data: "EnglishName", width: "3%" },              //3
-                            { data: "City", width: "2%" },                     //4
-                            { data: "NearestBigCity", width: "4%" },           //5
-                            { data: "Remarks", width: "7%" },                 //6
-                            { data: "LastModified", width: "7%" },             //7
-                            { data: "NumOfRides_last2Months", width: "2%" },   //8
+                            { data: "City", width: "2%" },                     //3
+                            { data: "NearestBigCity", width: "4%" },           //4
+                            { data: "Remarks", width: "7%" },                  //5
+                            { data: "LastModified", width: "7%" },             //6
+                            { data: "NumOfRides_last2Months", width: "2%" },   //7
+                            { data: "LatestDrive", width: "2%" },              //8
                             { data: "MostCommonPath", width: "3%" },           //9
                             { data: "JoinDate", width: "4%" },                 //10
                             { data: "Buttons", width: "25%" },                 //11
@@ -688,10 +687,12 @@
                                     <input type="checkbox" checked class="toggle-vis boldFont blueFont" onchange="updateLsVisibilty(7, this.checked)" data-column="7">
                                     <label>מס' הסעות בחודשיים אחרונים</label> |
                                     <input type="checkbox" checked class="toggle-vis boldFont blueFont" onchange="updateLsVisibilty(8, this.checked)" data-column="8">
+                                    <label>תאריך הסעה אחרונה</label> |
+                                    <input type="checkbox" checked class="toggle-vis boldFont blueFont" onchange="updateLsVisibilty(9, this.checked)" data-column="8">
                                     <label>מסלול שכיח: נקודה לנקודה</label> |
-                                    <input type="checkbox" checked class="toggle-vis boldFont blueFont" onchange="updateLsVisibilty(9, this.checked)" data-column="9">
+                                    <input type="checkbox" checked class="toggle-vis boldFont blueFont" onchange="updateLsVisibilty(10, this.checked)" data-column="9">
                                     <label>תאריך הצטרפות</label> |
-                                    <input type="checkbox" checked class="toggle-vis boldFont blueFont" onchange="updateLsVisibilty(10, this.checked)" data-column="10">
+                                    <input type="checkbox" checked class="toggle-vis boldFont blueFont" onchange="updateLsVisibilty(11, this.checked)" data-column="10">
                                     <label>פעולות</label>
                                 </div>
                                 <table id="datatable-buttons" class="table table-striped table-bordered">
@@ -705,18 +706,13 @@
                                             <th style="text-align:right">הערות</th>
                                             <th>עודכן לאחרונה</th>
                                             <th>מס' הסעות בחודשיים אחרונים</th>
+                                            <th>תאריך הסעה אחרונה</th>
                                             <th>מסלול שכיח: נקודה לנקודה</th>
                                             <th>תאריך הצטרפות</th>
                                             <th>פעולות</th>
                                         </tr>
                                     </thead>
                                     <tbody></tbody>
-
-
-
-
-
-
                                 </table>
                                 <div>
                                     <label for="skipPageInput">עבור לעמוד:</label>
