--- a/Road to Recovery/pages/ridePatForm.html
+++ b/Road to Recovery/pages/ridePatForm.html
@@ -2058,7 +2058,7 @@
             console.log(RideId);
             $('#wait').hide();
             swal({
-                title: "הנהג עודכן בהצלחה",
+                title: "הנהג התווסף להסעה",
                 type: "success",
                 timer: 1000,
                 showConfirmButton: false
