work on all ridepat viewridepat page
update also the db service of Gilad

--- a/Road to Recovery/pages/manageRidePats.html
+++ b/Road to Recovery/pages/manageRidePats.html
@@ -2194,7 +2194,7 @@
             }
 
             var volunteerId = -1 // VolunteerId - 1 means get ALL FUTURE ridePats // VolunteerId -2 means get ALL ridePats
-
+            //gilad check
             $.ajax({
                 dataType: "json",
                 url: "WebService.asmx/GetRidePatView",
