--- a/Road to Recovery/pages/documentedAbsenceModal.html
+++ b/Road to Recovery/pages/documentedAbsenceModal.html
@@ -3,16 +3,17 @@
 <div class="modal-dialog" role="document">
     <div class="modal-content modal-lg">
         <div class="modal-header">
-            <button id="overRideBS_modal_4changeClose_x" type="button" class="close closeBtn_DocumentAcallsModal" data-dismiss="modal" aria-label="Close">
+            <button id="overRideBS_modal_4changeClose_x-Absence" type="button" class="close closeBtn_DocumentAcallsModal" data-dismiss="modal" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
             </button>
             <h2 class="modal-title" id="DocumentedAbsenceTitle">היעדרויות של</h2>
         </div>
-        <div class="modal-body">
-            <div class="text-right">
+        <div class="modal-body ">
+            <div class="text-right AbsencePlusBtn">
                 <button type="button" id="documentAAbsencePlusBtn" class="btn btn-default"
                         data-keyboard="false"
-                        data-target="#DocumentAAbsenceModal" onclick="openDocumentAcallModal()">
+                        title="הוספת היעדרות"
+                        data-target="#DocumentAAbsenceModal" onclick="openDocumentAAbsenceModal()">
                     <i class="fa fa-plus"></i>
                 </button>
             </div>
@@ -35,57 +36,66 @@
         <!-- ↓ DocumentAAbsenceModal ↓ -->
 
         <div class="modal fade" id="DocumentAAbsencesModal" tabindex="-1" role="dialog" aria-hidden="true">
-            <div id="overRideBS_modal-dialog" class="modal-dialog" role="document">
-                <div id="overRideBS_modal_4changeBg" class="modal-content">
+            <div id="overRideBS_modal-dialog-Absence" class="modal-dialog" role="document">
+                <div id="overRideBS_modal_4changeBg-Absence" class="modal-content">
                     <div class="modal-header">
-                        <h2 class="modal-title">תיעוד שיחה</h2>
+                        <h2 class="modal-title">הוספת היעדרות</h2>
                     </div>
-                    <div id="overRideBS_modal_4changelinesColor" class="modal-body">
+                    <div id="overRideBS_modal_4changelinesColor-Absence" class="modal-body">
                         <span class="redTxt">* שדה חובה</span>
                         <br />
                         <br />
                         <table id="DocumentAAbsenceTable">
                             <tr>
-                                <td class="rightCol">בתאריך</td>
+                                <td class="rightCol">מתאריך <span class="redTxt">*</span></td>
                                 <td class="leftCol">
-                                    <input name="DocumentAAbsenceDatePicker" id="DocumentAAbsenceDatePicker" type="date" onclick="disableFutureIn_DocumentAcallDatePicker()" />
+                                    <input name="DocumentAAbsenceDatePicker" id="DocumentAAbsenceDatePickerFrom" type="date"  />
                                 </td>
                             </tr>
+
                             <tr>
-                                <td class="rightCol">שעה <span class="redTxt">*</span></td>
+                                <td class="rightCol">עד תאריך <span class="redTxt">*</span></td>
                                 <td class="leftCol">
-                                    <input id="DocumentAAbsenceTime" type="time" />
+                                    <input name="DocumentAAbsenceDatePicker" id="DocumentAAbsenceDatePickerUntil" type="date"  />
                                 </td>
                             </tr>
+
                             <tr>
                                 <td class="rightCol">רכז.ת <span class="redTxt">*</span></td>
                                 <td class="leftCol">
-                                    <select id="DocumentAAbsence_choooseCoordinator" onchange="DocumentAcall_choooseCoordinator_changed()">
+                                    <select id="DocumentAAbsence_choooseCoordinator">
                                     </select>
                                 </td>
                             </tr>
                             <tr>
-                                <td class="rightCol">תוכן השיחה <span class="redTxt">*</span></td>
+                                <td class="rightCol">סיבת היעדרות <span class="redTxt">*</span></td>
                                 <td class="leftCol">
-                                    <select id="DocumentAAbsence_choooseContent" onchange="DocumentAcall_choooseContent_changed()">
+                                    <select id="DocumentAAbsence_choooseContent" onchange="">
+                                        <option value="-1">יש לבחור סיבה</option>
+                                        <option value="מחלה">מחלה</option>
+                                        <option value='חול'>חו"ל</option>
+                                        <option value="אחר">אחר</option>
                                     </select>
                                 </td>
                             </tr>
                             <tr>
-                                <td class="rightCol"></td>
+                                <td class="rightCol">הערות</td>
                                 <td class="leftCol">
-                                    <textarea onblur="DocumentAcall_writeContent_blured()" onclick="DocumentedAcall_writeContent_clicked()" id="DocumentAcall_writeContent" maxlength="400" placeholder="&lt;מלל חופשי עד 400 תווים&gt;"></textarea>
+                                    <textarea  id="DocumentAAbsence_writeContent" maxlength="400" placeholder="&lt;מלל חופשי עד 155 תווים&gt;"></textarea>
                                 </td>
+                            </tr>
+                            <tr>
+
                             </tr>
                         </table>
-                        <span id="DocumentAAbsence_contentErrorMsg" class="redTxt">יש למלא לפחות אחד מהשדות של תוכן השיחה</span>
-                        <span id="DocumentAAbsence_CoordinatorErrorMsg" class="redTxt">יש לבחור רכז.ת מהרשימה</span>
+                        <span id="DocumentAAbsence_contentErrorMsg" class="redTxt">יש למלא את כל שדות החובה (*)</span>
+                        <span id="DocumentAAbsence_CoordinatorErrorMsg" class="redTxt">יש לבחור טווח תאריכים הגיוני</span>
 
                     </div>
                     <div class="text-right modal-footer">
                         <!-- for some reason right in bs means left -->
-                        <button type="button" id="saveAbsenceBtn" class="fixWidth btn btn-secondary" onclick="documentAcall2DB()">שמירה</button>
-                        <button type="button" id="cancellAbsenceBtn" class="fixWidth btn btn-secondary" onclick="cancelCallDocument()">ביטול</button>
+                        <button type="button" id="saveAbsenceBtn" class="fixWidth btn btn-secondary" onclick="documentAAbsence2DB()">שמירה</button>
+                        <button type="button" id="cancellAbsenceBtn" class="fixWidth btn btn-secondary" onclick="cancelAbsenceDocument()">ביטול</button>
                     </div>
                 </div>
             </div>
