work on DBservice & absence.js
add and fix the edit delete btn
add Scope identity to insert to know the id of absence.
add functionality to the buttons.(edit and delete)

--- a/Road to Recovery/pages/documentedAbsenceModal.html
+++ b/Road to Recovery/pages/documentedAbsenceModal.html
@@ -39,7 +39,7 @@
             <div id="overRideBS_modal-dialog-Absence" class="modal-dialog" role="document">
                 <div id="overRideBS_modal_4changeBg-Absence" class="modal-content">
                     <div class="modal-header">
-                        <h2 class="modal-title">הוספת היעדרות</h2>
+                        <h2 id="AAbsenceModalTitle" class="modal-title">הוספת היעדרות</h2>
                     </div>
                     <div id="overRideBS_modal_4changelinesColor-Absence" class="modal-body">
                         <span class="redTxt">* שדה חובה</span>
